--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,3 +3,10 @@ p {
     font-size: large;
     color: blueviolet;
 }
+
+h1 {
+    text-align: center;
+    font-family: "despina-pro", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
