--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,13 +1,14 @@
-p {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: large;
-    color: blueviolet;
-}
-
 h1 {
     text-align: center;
     font-family: "despina-pro", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 70px;
+}
+
+button {
+    font-family: "forma-djr-display", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size:16px;
 }
