--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,8 +7,12 @@ h1 {
 }
 
 button {
+    padding: 0;
+    border: none;
+    background:none;
     font-family: "forma-djr-display", sans-serif;
     font-weight: 600;
     font-style: normal;
     font-size:16px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
