--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -38,3 +38,12 @@ Video {
     min-width: 100%;
     min-height: 100%;
 }
+
+p {
+position: relative;
+color: white;   
+font-family: "forma-djr-display", sans-serif;
+font-weight: 600;
+font-style: normal; 
+font-size: 14px;
+}
