--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,9 @@ color: #99D758;
 
 Video {
     position: fixed;
-    right: 0;
-    bottom: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     min-width: 100%;
     min-height: 100%;
 }
@@ -47,4 +48,9 @@ Video {
     font-weight: 600;
     font-style: normal; 
     font-size: 18px;
+    margin: auto;
+    padding: 13% 0;
+    width: 75%;
+    height: 100%;
+    flex-direction: column;
 }
