--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,19 @@ Video {
     height: 100%;
     flex-direction: column;
 }
+
+.section-one {
+    display:flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding-left: 15%;
+    vertical-align: middle;
+    align-items: left;
+    height:
+}
+
+.posters {
+    background-color: black;
+    min-width: 150px;
+    max-width: 400px;
+}
