--- a/css/styles.css
+++ b/css/styles.css
@@ -61,14 +61,14 @@ Video {
     display:flex;
     justify-content: flex-start;
     flex-wrap: wrap;
-    padding-left: 15%;
+    padding-left: 30px;
     vertical-align: middle;
     align-items: left;
-
 }
 
 .posters {
-    background-color: black;
+    padding:10%;
     min-width: 150px;
     max-width: 400px;
 }
+
