--- a/css/styles.css
+++ b/css/styles.css
@@ -57,15 +57,14 @@ Video {
 }
 
 .section-one {
-   content:"";
-   clear: both;
-   display: table;
+   display:flex;
+   align-items: center;
+   justify-content: center;
 }
 
 .posters {
-    float: left;
-    width: 25%;
-    padding: 5px;
+   flex: 25%;
+   padding: 80px;
 }
 
 .caption {
@@ -82,4 +81,4 @@ Video {
     font-style: normal;
     font-size:34px;
     color: white;
-}
+    }
