--- a/css/styles.css
+++ b/css/styles.css
@@ -64,8 +64,17 @@ Video {
     text-align: center;
 }
 
+.section-typo {
+    padding: 20px;
+    display: flex;
+    height: auto;
+    flex: 1 1 auto;
+    text-align: center;
+}
+
 .posters {
     width:100%;
+    margin: 5px;
 }
 
 
