--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,15 @@ Video {
     margin:5px;
 }
 
-
+h2 {
+    text-align: center;
+    font-family: "despina-pro", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 30px;
+    color: white;
+    
+}
 
 .image {
     opacity: 1;
