--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,16 @@ Video {
     height: 100%;
     flex-direction: column;
 }
+ 
+a {
+    background-color: black;
+    padding: 16px 32px;
+    font-family: "forma-djr-display", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size:18px;
+    color: white;
+}
 
 .section-one {
     padding: 20px;
