--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,27 @@ a {
     font-style: normal;
     font-size:24px;
     color: white;
+    
 }
+
+
+.reflection {
+    display: flex;
+    position: relative;
+    text-align: center;
+    padding: 16px 32px;
+    font-family: "forma-djr-display", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size:24px;
+    color: white;
+    margin: auto;
+    padding: 13% 0;
+    width: 60%;
+    height: 100%;
+    flex-direction: column;
+}
+
 
 
 .section-typo {
